# final-project-level3-cv-12

./: README.md  dataset.py  inference.py  inference_v1.py  inference_v2.py  inference_v3.py  test_inference.py  train_stage_1.py  train_stage_2.py  train_stage_2_1.py
CycleGAN/: dataset.py  losses.py  model.py  train.py  utils.py
CycleGAN/wandb/: latest-run
CycleGAN/wandb/run-20211220_142212-3qy19tqu/: run-3qy19tqu.wandb
CycleGAN/wandb/run-20211220_142338-23remfch/: run-23remfch.wandb
UGATIT-pytorch/: UGATIT.py  UGATIT_inference.py  inference.py  main.py
_T2097/data/: modify.py
_T2097/data_loader/: data_loader.py
_T2097/inference/: inference_stage_1.py  test.py
backend/app/: main.py
backend/model/: dataset.py  model.py
backend/module_fold/: CEModule.py  FMModule.py  ISModule.py
backendU/app/: __main__.py  main.py
backendU/model/: model.py
backendU/module_fold/: Block.py  ISModule_p.py  utils.py
data/: modify.py
data/airflow/: airflow.db
data/dockers/: make.sh
data/image_files/: delete.sh
data/upload_server/: pyproject.toml  server.py
data_loader/: dataset.py
frontend/: package-lock.json  package.json  postcss.config.js
frontend/src/: App.tsx
inference/: inference_stage_1.py  inference_stage_2.py  test.py  test_inference.py
manifold/: manifold.py
manifold projection/: ManifoldProjection.py  README.md  test.py
manifold_projection/: ManifoldProjection.py  README.md  test.py
module/: Block.py  CEModule.py  FMModule.py  utils.py
module_fold/: Block.py  CEModule.py  FMModule.py  ISModule.py  utils.py
(+89 files in other folders)
