[tool.poetry]
name = "upload_server"
version = "0.1.0"
description = "upload_server"
authors = ["yangjae lee"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.0"
uvicorn-worker = "^0.0.1"
uvicorn = "^0.16.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
